# uvault

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: contributing.md  how-to.md  index.md  reference.md
src/uvault/: add.py  check.py  cli.py  develop.py  forge.py  github.py  project.py  source.py  status.py  sync.py  vcs.py
tests/: test_add.py  test_check.py  test_cli.py  test_develop.py  test_forge.py  test_github.py  test_project.py  test_source.py  test_status.py  test_sync.py
