[project]
name = "uvault"
version = "0.1.0"
description = "Development and vaulting workflow for uv VCS dependencies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diskcache>=5.6.3",
    "tomlkit>=0.15.0",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uvault = "uvault.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=src/uvault --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/uvault/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
