[project]
name = "uvault"
version = "0.5.1"
description = "Development and vaulting workflow for uv VCS dependencies."
readme = "README.md"
authors = [
    { name = "Pierre Verkest", email = "pierre@verkest.fr" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "tomlkit>=0.15.0",
]

[project.optional-dependencies]
github = ["pygithub>=2.3.0"]

[project.urls]
Homepage = "https://github.com/petrus-v/uvault"
Repository = "https://github.com/petrus-v/uvault"
Documentation = "https://uvault.apycod.com"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "mkdocstrings[python]>=1.0.4",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "zensical>=0.0.45",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uvault = "uvault.cli:main"

[tool.pytest.ini_options]
addopts = ["--cov=src/uvault", "--cov-report=term-missing", "--cov-report=xml", "--cov-fail-under=100"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.bumpversion]
current_version = "0.5.1"
commit = true
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = [
    # make sur uv.lock is updated with proper version number
    # safer than a bumpverion.files config to avoid
    # version collisions with other dependencies
    "uv sync",
    # just to be sure build still works
    "uv build",
    "uvx pre-commit run --files uv.lock pyproject.toml",
    "git add pyproject.toml uv.lock",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/uvault/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
